--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -103,6 +103,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             android:title="@string/pref_gallery_screen_title"
             android:summary="@string/pref_gallery_screen_summary" >
             <CheckBoxPreference
+                android:defaultValue="false"
+                android:key="@string/pref_key_gallery_scroll_thread"
+                android:title="@string/pref_gallery_scroll_thread_title"
+                android:summary="@string/pref_gallery_scroll_thread_summary" />
+            
+            <CheckBoxPreference
                 android:defaultValue="true"
                 android:key="@string/pref_key_gallery_scaleimageview"
                 android:title="@string/pref_gallery_scaleimageview_title"
