--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -171,6 +171,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             android:key="@string/pref_key_do_not_close_tabs"
             android:title="@string/pref_do_not_close_tabs_title"
             android:summary="@string/pref_do_not_close_tabs_summary" />
+        
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="@string/pref_key_pin_markup"
+            android:title="@string/pref_pin_markup_title"
+            android:summary="@string/pref_pin_markup_summary" />
     </PreferenceCategory>
     
     <PreferenceCategory android:title="@string/pref_cat_downloads" >
