--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -28,5 +28,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     
     <!-- превью при выборе файла (при отправке поста) -->
     <dimen name="attachment_thumbnail_size">48dp</dimen>
+
+    <dimen name="app_defaultsize_w">632.0dip</dimen>
+    <dimen name="app_defaultsize_h">598.0dip</dimen>
+    <dimen name="app_minimumsize_w">632.0dip</dimen>
+    <dimen name="app_minimumsize_h">598.0dip</dimen>
     
 </resources>
