--- a/res/values/donottranslate.xml
+++ b/res/values/donottranslate.xml
@@ -21,12 +21,14 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="empty"></string>
     
     <string name="pref_key_cat_appearance">PREF_KEY_CAT_APPEARANCE</string>
+    <string name="pref_key_cat_advanced">PREF_KEY_CAT_ADVANCED</string>
     <string name="pref_key_download_thread_mode">PREF_KEY_DOWNLOAD_THREAD_MODE</string>
     <string name="pref_key_last_favorites_page">PREF_KEY_LAST_FAVORITES_PAGE</string>
     <string name="pref_key_name">PREF_KEY_NAME</string>
     <string name="pref_key_email">PREF_KEY_EMAIL</string>
     <string name="pref_key_hide_personal">PREF_KEY_HIDE_PERSONAL</string>
     <string name="pref_key_random_hash">PREF_KEY_RANDOM_HASH</string>
+    <string name="pref_key_show_all_chans_list">PREF_KEY_SHOW_ALL_CHANS_LIST</string>
     <string name="pref_key_show_nsfw_boards">PREF_KEY_SHOW_NSFW_BOARDS</string>
     <string name="pref_key_autohide">PREF_KEY_AUTOHIDE</string>
     <string name="pref_key_autohide_json">PREF_KEY_AUTOHIDE_JSON</string>
