--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -148,12 +148,20 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         </PreferenceScreen>
     </PreferenceCategory>
     
-    <PreferenceCategory android:title="@string/pref_cat_advanced" >
+    <PreferenceCategory
+        android:key="@string/pref_key_cat_advanced"
+        android:title="@string/pref_cat_advanced" >
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="@string/pref_key_random_hash"
             android:title="@string/pref_random_hash_title"
             android:summary="@string/pref_random_hash_summary" />
+        
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="@string/pref_key_show_all_chans_list"
+            android:title="@string/pref_show_all_chans_list_title"
+            android:summary="@string/pref_show_all_chans_list_summary" />
         
         <CheckBoxPreference
             android:defaultValue="false"
