--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -18,6 +18,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
+    <PreferenceScreen
+        android:key="@string/pref_key_cat_chans"
+        android:title="@string/pref_cat_chans" />
+    
     <PreferenceCategory android:title="@string/pref_cat_personal" >
         <EditTextPreference
             android:key="@string/pref_key_name"
