--- a/res/values/donottranslate.xml
+++ b/res/values/donottranslate.xml
@@ -47,6 +47,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_key_hide_actionbar_on_scroll">PREF_KEY_HIDE_ACTIONBAR_ON_SCROLL</string>
     <string name="pref_key_replies_only_quantity">PREF_KEY_REPLIES_ONLY_QUANTITY</string>
     <string name="pref_key_gallery_screen">PREF_KEY_GALLERY_SCREEN</string>
+    <string name="pref_key_gallery_fullscreen">PREF_KEY_GALLERY_FULLSCREEN</string>
     <string name="pref_key_gallery_scroll_thread">PREF_KEY_GALLERY_SCROLL_THREAD</string>
     <string name="pref_key_gallery_scaleimageview">PREF_KEY_GALLERY_SCALEIMAGEVIEW</string>
     <string name="pref_key_gallery_nativegif">PREF_KEY_GALLERY_NATIVEGIF</string>
