--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -119,6 +119,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             
             <CheckBoxPreference
                 android:defaultValue="false"
+                android:key="@string/pref_key_gallery_swipe_to_close"
+                android:title="@string/pref_gallery_swipe_to_close_title"
+                android:summary="@string/pref_gallery_swipe_to_close_summary" />
+            
+            <CheckBoxPreference
+                android:defaultValue="false"
                 android:key="@string/pref_key_gallery_scroll_thread"
                 android:title="@string/pref_gallery_scroll_thread_title"
                 android:summary="@string/pref_gallery_scroll_thread_summary" />
