--- a/res/layout/gallery_layout_fullscreen.xml
+++ b/res/layout/gallery_layout_fullscreen.xml
@@ -22,24 +22,23 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
     
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:layout_height="match_parent" >
+        
+        <nya.miku.wishmaster.lib.gallery.ViewPagerFixed
+            android:id="@+id/gallery_viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
         
         <ProgressBar
             android:id="@android:id/progress"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:visibility="gone" />
-
-        <nya.miku.wishmaster.lib.gallery.ViewPagerFixed
-            android:id="@+id/gallery_viewpager"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-    </LinearLayout>
+    </FrameLayout>
     
     <LinearLayout
         android:id="@+id/gallery_navigation_bar_container"
