custom user themes support (implementation)

--- a/res/layout/sidebar_layout.xml
+++ b/res/layout/sidebar_layout.xml
@@ -22,7 +22,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="?attr/sidebarBackground" >
+    android:background="?attr/sidebarBackground"
+    tools:ignore="Overdraw" >
     
     <LinearLayout
         android:layout_width="match_parent"
