--- a/res/layout/favorites_fragment.xml
+++ b/res/layout/favorites_fragment.xml
@@ -18,9 +18,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
 <nya.miku.wishmaster.lib.gallery.ViewPagerFixed xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/activityRootBackground" >
+    android:background="?attr/activityRootBackground"
+    tools:ignore="Overdraw" >
     
     <android.support.v4.view.PagerTitleStrip
         android:layout_width="match_parent"
