--- a/res/layout/favorites_listview.xml
+++ b/res/layout/favorites_listview.xml
@@ -18,7 +18,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@android:id/list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/activityRootBackground" />
+    android:background="?attr/activityRootBackground"
+    tools:ignore="Overdraw" />
