--- a/res/layout/filedialog_main.xml
+++ b/res/layout/filedialog_main.xml
@@ -18,10 +18,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/activityRootBackground" >
+    android:background="?attr/activityRootBackground"
+    tools:ignore="Overdraw" >
     
     <LinearLayout
         android:id="@+id/filedialog_LinearLayoutList"
