--- a/res/layout/postform_layout_pinned_markup.xml
+++ b/res/layout/postform_layout_pinned_markup.xml
@@ -22,6 +22,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/activityRootBackground"
+    tools:ignore="Overdraw"
     android:orientation="vertical" >
     
     <LinearLayout
