--- a/res/layout/frame_loading.xml
+++ b/res/layout/frame_loading.xml
@@ -17,14 +17,8 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
+    style="?android:attr/progressBarStyleLarge"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >
-
-    <ProgressBar
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:indeterminate="true" />
-    
-</FrameLayout>
+    android:layout_height="wrap_content"
+    android:indeterminate="true" />
