--- a/res/layout/gallery_layout_fullscreen.xml
+++ b/res/layout/gallery_layout_fullscreen.xml
@@ -20,7 +20,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    tools:ignore="MergeRootFrame" >
     
     <FrameLayout
         android:layout_width="match_parent"
