--- a/res/values/donottranslate.xml
+++ b/res/values/donottranslate.xml
@@ -120,6 +120,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_key_sidepanel_hide">PREF_KEY_SIDEPANEL_HIDE</string>
     <string name="pref_key_sidepanel_width">PREF_KEY_SIDEPANEL_WIDTH</string>
     <string name="pref_sidepanel_width_value_default">@string/pref_sidepanel_width_value_30percent</string>
+    <string name="pref_sidepanel_width_value_15percent">PREF_SIDEPANEL_WIDTH_VALUE_15PERCENT</string>
+    <string name="pref_sidepanel_width_value_20percent">PREF_SIDEPANEL_WIDTH_VALUE_20PERCENT</string>
     <string name="pref_sidepanel_width_value_25percent">PREF_SIDEPANEL_WIDTH_VALUE_25PERCENT</string>
     <string name="pref_sidepanel_width_value_30percent">PREF_SIDEPANEL_WIDTH_VALUE_30PERCENT</string>
     <string name="pref_sidepanel_width_value_35percent">PREF_SIDEPANEL_WIDTH_VALUE_35PERCENT</string>
@@ -127,6 +129,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_sidepanel_width_value_45percent">PREF_SIDEPANEL_WIDTH_VALUE_45PERCENT</string>
     <string name="pref_sidepanel_width_value_50percent">PREF_SIDEPANEL_WIDTH_VALUE_50PERCENT</string>
     <string-array name="pref_sidepanel_width_values" translatable="false">
+        <item>@string/pref_sidepanel_width_value_15percent</item>
+        <item>@string/pref_sidepanel_width_value_20percent</item>
         <item>@string/pref_sidepanel_width_value_25percent</item>
         <item>@string/pref_sidepanel_width_value_30percent</item>
         <item>@string/pref_sidepanel_width_value_35percent</item>
