--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -174,6 +174,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <PreferenceCategory
         android:key="@string/pref_key_cat_advanced"
         android:title="@string/pref_cat_advanced" >
+        <Preference
+            android:key="@string/pref_key_ssl_certificates"
+            android:title="@string/pref_ssl_certificates_title"
+            android:summary="@string/pref_ssl_certificates_summary" />
+        
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="@string/pref_key_random_hash"
