--- a/res/values/donottranslate.xml
+++ b/res/values/donottranslate.xml
@@ -32,6 +32,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_key_random_hash">PREF_KEY_RANDOM_HASH</string>
     <string name="pref_key_show_all_chans_list">PREF_KEY_SHOW_ALL_CHANS_LIST</string>
     <string name="pref_key_show_nsfw_boards">PREF_KEY_SHOW_NSFW_BOARDS</string>
+    <string name="pref_key_mask_pictures">PREF_KEY_MASK_PICTURES</string>
     <string name="pref_key_unlocked_chan_format">PREF_KEY_UNLOCKED_CHAN_%s</string>
     <string name="pref_key_autohide">PREF_KEY_AUTOHIDE</string>
     <string name="pref_key_autohide_json">PREF_KEY_AUTOHIDE_JSON</string>
