--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -197,6 +197,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             android:title="@string/pref_show_nsfw_boards_title"
             android:summary="@string/pref_show_nsfw_boards_summary" />
         
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="@string/pref_key_mask_pictures"
+            android:title="@string/pref_mask_pictures_title"
+            android:summary="@string/pref_mask_pictures_summary" />
+        
         <Preference
             android:key="@string/pref_key_autohide"
             android:title="@string/pref_autohide_title"
