--- a/res/values/donottranslate.xml
+++ b/res/values/donottranslate.xml
@@ -42,6 +42,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <!-- <string name="pref_key_hide_completely">PREF_KEY_HIDE_COMPLETELY</string> -->
     <string name="pref_key_external_links_confirmation">PREF_KEY_EXTERNAL_LINKS_CONFIRMATION</string>
     <string name="pref_key_do_not_close_tabs">PREF_KEY_DO_NOT_CLOSE_TABS</string>
+    <string name="pref_key_scroll_volume_buttons">PREF_KEY_SCROLL_VOLUME_BUTTONS</string>
     <string name="pref_key_preferences_submenu">PREF_KEY_PREFERENCES_SUBMENU</string>
     <string name="pref_key_pin_markup">PREF_KEY_PIN_MARKUP</string>
     <string name="pref_key_show_date">PREF_KEY_SHOW_DATE</string>
