--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -228,6 +228,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         
         <CheckBoxPreference
             android:defaultValue="false"
+            android:key="@string/pref_key_scroll_volume_buttons"
+            android:title="@string/pref_scroll_volume_buttons_title"
+            android:summary="@string/pref_scroll_volume_buttons_summary" />
+        
+        <CheckBoxPreference
+            android:defaultValue="false"
             android:key="@string/pref_key_preferences_submenu"
             android:title="@string/pref_preferences_submenu_title"
             android:summary="@string/pref_preferences_submenu_summary" />
