--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -66,6 +66,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <item name="context_menu_delete" type="id"/>
     <item name="context_menu_delete_files" type="id"/>
     <item name="context_menu_report" type="id"/>
+    <item name="context_menu_subscribe" type="id"/>
     <item name="context_menu_save_captcha" type="id"/>
     
     <item name="context_menu_quickaccess_move" type="id"/>
